Fix bug 208843: make AddRef and Release of nsPipeInput/OutputStreams threadsafe, so that we don't abort long downloads on fast dual CPU machines. r=dougt, wtchang. sr=darin