xpcom/io/nsPipe3.cpp
@@ -662,14 +662,14 @@ nsPipeInputStream::OnInputException(nsresult reason, nsPipeEvents &events)
 NS_IMETHODIMP_(nsrefcnt)
 nsPipeInputStream::AddRef(void)
 {
-    ++mReaderRefCnt;
+    PR_AtomicIncrement((PRInt32*)&mReaderRefCnt);
     return mPipe->AddRef();
 }
 
 NS_IMETHODIMP_(nsrefcnt)
 nsPipeInputStream::Release(void)
 {
-    if (--mReaderRefCnt == 0)
+    if (PR_AtomicDecrement((PRInt32 *)&mReaderRefCnt) == 0)
         Close();
     return mPipe->Release();
 }
@@ -1004,14 +1004,14 @@ nsPipeOutputStream::OnOutputException(nsresult reason, nsPipeEvents &events)
 NS_IMETHODIMP_(nsrefcnt)
 nsPipeOutputStream::AddRef()
 {
-    mWriterRefCnt++;
+    PR_AtomicIncrement((PRInt32*)&mWriterRefCnt);
     return mPipe->AddRef();
 }
 
 NS_IMETHODIMP_(nsrefcnt)
 nsPipeOutputStream::Release()
 {
-    if (--mWriterRefCnt == 0)
+    if (PR_AtomicDecrement((PRInt32 *)&mWriterRefCnt) == 0)
         Close();
     return mPipe->Release();
 }
